--- a/pc.html
+++ b/pc.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/game-section.css">
+    <link rel="stylesheet" href="./styles/benefits.css">
     <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/cart.css">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>Carrito de compras</title>
+    <title>PC | Games</title>
 </head>
 
 <body>
@@ -87,54 +88,191 @@
         </div>
     </header>
 
-    <!-- CART -->
-    <section class="cart-section">
-        <div class="cart-container">
-            <div class="cart-game">
-                <a href="#">
-                    <img src="./public/imgs/games/fallout-76-pc-game-steam-cover.jpg" alt="buckshot-roulette">
-                </a>
-                <div class="game-info">
-                    <p>Fallout 76</p>
-                    <span>$9.99</span>
-                    <button>Eliminar del carrito</button>
+    <main>
+        <!-- GAME SECTION -->
+        <section class="game-section">
+            <div class="game-title-container">
+                <h2 style="text-align: center; margin-bottom: 52px;">
+                    <svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px" viewBox="0 0 512 512"
+                        xml:space="preserve" fill="#ffffff" stroke="#ffffff">
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier">
+                            <style type="text/css">
+                                .st0 {
+                                    fill: #ffffff;
+                                }
+                            </style>
+                            <g>
+                                <path class="st0"
+                                    d="M477.984,39.203H34.016C15.219,39.203,0,54.438,0,73.219v283.969c0,18.781,15.219,34.016,34.016,34.016H220 v7.578c0,18.781-15.219,34.016-34.016,34.016H136v40h73.188h93.625H376v-40h-49.984c-18.797,0-34.016-15.234-34.016-34.016v-7.578 h185.984c18.797,0,34.016-15.234,34.016-34.016V73.219C512,54.438,496.781,39.203,477.984,39.203z M464,315.859 c0,6.266-5.078,11.344-11.344,11.344H59.344c-6.266,0-11.344-5.078-11.344-11.344V98.547c0-6.266,5.078-11.344,11.344-11.344 h393.313c6.266,0,11.344,5.078,11.344,11.344V315.859z">
+                                </path>
+                            </g>
+                        </g>
+                    </svg>
+                    PC
+                </h2>
+                <div class="games-container">
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/elden-ring.jpg" alt="buckshot-roulette">
+                                <span class="discount">-20%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Elden Ring - Shadow of the Erdtree</p>
+                            <p>$34.55</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/destiny-2-the-final-shape.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-25%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Destiny 2: The Final Shape</p>
+                            <p>$40.14</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/still-wakes-the-deep.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-34%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Still Wakes the Deep</p>
+                            <p>$24.68</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/dragon-ball-sparking-zero-ultimate-edition.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-25%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Dragon Ball: Sparking! ZERO</p>
+                            <p>$89.08</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/test-drive-unlimited-solar-crown-gold-edition.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-38%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Test Drive Unlimited Solar Crown</p>
+                            <p>$53.66</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/the-elder-scrolls-online-deluxe-upgrade-gold-road-deluxe-upgrade-pc-juego-steam-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-24%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Warhammer 40,000: Space Marine 2</p>
+                            <p>$82.11</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/dark-souls-remastered-pc-game-steam-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-60%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Dark Souls Remastered</p>
+                            <p>$17.16</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/moving-out-2-deluxe-edition-deluxe-edition.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-37%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Moving Out 2 Deluxe Edition</p>
+                            <p>$26.86</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/zoeti-pc-jeu-steam-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-63%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Zoeti</p>
+                            <p>$7.72</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/call-of-duty-modern-warfare-iii-ps5-playstation-5-game-playstation-store-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-16%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Call of Duty: Modern Warfare III PS5</p>
+                            <p>$71.88</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/alien-rogue-incursion-ps5-playstation-5-game-playstation-store-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-10%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Alien: Rogue Incursion</p>
+                            <p>$76.99</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/skydance-s-behemoth-ps5-playstation-5-game-playstation-store-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-12%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Skydance's Behemoth</p>
+                            <p>$66.50</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="cart-game">
-                <a href="#">
-                    <img src="./public/imgs/games/grand-theft-auto-v-premium-online-edition-premium-online-edition-pc-game-rockstar-cover.jpg"
-                        alt="buckshot-roulette">
-                </a>
-                <div class="game-info">
-                    <p>Grand Theft Auto V: Premium Online Edition</p>
-                    <span>$11.99</span>
-                    <button>Eliminar del carrito</button>
-                </div>
-            </div>
-            <div class="cart-game">
-                <a href="#">
-                    <img src="./public/imgs/games/another-crab-s-treasure-pc-game-steam-cover.jpg"
-                        alt="buckshot-roulette">
-                </a>
-                <div class="game-info">
-                    <p>Another Crab's Treasure</p>
-                    <span>$16.25</span>
-                    <button>Eliminar del carrito</button>
-                </div>
-            </div>
-        </div>
-        <div class="cart-info">
-            <h3>Información de la compra</h3>
-            <span class="cart-text">Total: <strong>$38.23</strong></span>
-            <span class="cart-text">Cantidad de juegos: <strong>3</strong></span>
-            <span class="cart-text">Nombre Completo: <strong>Marcos Dionel Iannibelli</strong></span>
-            <span class="cart-text">Localidad: <strong>CABA, Argentina</strong></span>
-            <span class="cart-text">Número de celular: <strong>1122334455</strong></span>
-            <span class="cart-text">Reembolso disponible: <strong>Si</strong></span>
-            <button><span class="span-btn">Comprar</span></button>
-        </div>
-    </section>
-
+        </section>
+    </main>
 
     <!-- FOOTER -->
     <footer>
@@ -696,11 +834,11 @@
         <div class="bar-separator"></div>
         <div class="terms-footer">
             <span>El uso de este sitio web implica la aceptación de los <strong>Términos y condiciones</strong>, la
-                <strong>Política de cookies</strong> y la <strong>Política de privacidad</strong>. Todos los derechos de
-                autor, marcas comerciales y marcas de servicio pertenecen a sus correspondientes propietarios.</span>
+                <strong>Política de cookies</strong> y la <strong>Política de privacidad</strong>. Todos los
+                derechos de autor, marcas comerciales y marcas de servicio pertenecen a sus correspondientes
+                propietarios.</span>
         </div>
     </footer>
-    </main>
 </body>
 
 </html>
