--- a/playstation.html
+++ b/playstation.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/game-section.css">
+    <link rel="stylesheet" href="./styles/benefits.css">
     <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/cart.css">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>Carrito de compras</title>
+    <title>Playstation | Games</title>
 </head>
 
 <body>
@@ -87,54 +88,190 @@
         </div>
     </header>
 
-    <!-- CART -->
-    <section class="cart-section">
-        <div class="cart-container">
-            <div class="cart-game">
-                <a href="#">
-                    <img src="./public/imgs/games/fallout-76-pc-game-steam-cover.jpg" alt="buckshot-roulette">
-                </a>
-                <div class="game-info">
-                    <p>Fallout 76</p>
-                    <span>$9.99</span>
-                    <button>Eliminar del carrito</button>
+    <main>
+        <!-- GAME SECTION -->
+        <section class="game-section">
+            <div class="game-title-container">
+                <h2 style="text-align: center; margin-bottom: 52px;">
+                    <svg fill="#ffffff" width="80px" height="80px" viewBox="0 0 512 512"
+                        xmlns="http://www.w3.org/2000/svg" stroke="#ffffff">
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier">
+                            <title>ionicons-v5_logos</title>
+                            <path
+                                d="M399.77,203c-.8-17.1-3.3-34.5-10.8-50.1a82.45,82.45,0,0,0-16.5-23.2,105.59,105.59,0,0,0-21.3-16.3c-17.1-10.2-37.5-17-84.4-31S192,64,192,64V422.3l79.9,25.7s.1-198.8.1-299.5v-3.8c0-9.3,7.5-16.8,16.1-16.8h.5c8.5,0,15.5,7.5,15.5,16.8V278c11,5.3,29.2,9.3,41.8,9.1a47.79,47.79,0,0,0,24-5.7,49.11,49.11,0,0,0,18.4-17.8,78.64,78.64,0,0,0,9.9-27.3C400.07,225.5,400.17,214.2,399.77,203Z">
+                            </path>
+                            <path
+                                d="M86.67,357.8c27.4-9.8,89.3-29.5,89.3-29.5V281.1s-76.5,24.8-111.3,37.1c-8.6,3.1-17.3,5.9-25.7,9.5-9.8,4.1-19.4,8.7-28.1,14.8a26.29,26.29,0,0,0-9.2,10.1,17.36,17.36,0,0,0-.5,13.6c2,5.1,5.8,9.3,10.1,12.6,7.8,5.9,17.1,9.5,26.4,12.2a262.42,262.42,0,0,0,88.4,13.3c14.5-.2,36-1.9,50-4.4v-42s-11,2.5-41.3,12.5c-4.6,1.5-9.2,3.3-14,4.3a104.87,104.87,0,0,1-21.6,2.2c-6.5-.3-13.2-.7-19.3-3.1-2.2-1-4.6-2.2-5.5-4.6-.8-2,.3-4,1.7-5.4C78.87,360.9,82.87,359.3,86.67,357.8Z">
+                            </path>
+                            <path
+                                d="M512,345.9c-.1-6-3.7-11.2-7.9-15-7.1-6.3-15.9-10.3-24.7-13.5-5.5-1.9-9.3-3.3-14.7-5-25.2-8.2-51.9-11.2-78.3-11.3-8,.3-23.1.5-31,1.4-21.9,2.5-67.3,15.4-67.3,15.4v48.8s67.5-21.6,96.5-31.8a94.43,94.43,0,0,1,30.3-4.6c6.5.2,13.2.7,19.4,3.1,2.2.9,4.5,2.2,5.5,4.5.9,2.6-.9,5-2.9,6.5-4.7,3.8-10.7,5.3-16.2,7.4-41,14.5-132.7,44.7-132.7,44.7v47s117.2-39.6,170.8-58.8c8.9-3.3,17.9-6.1,26.4-10.4,7.9-4,15.8-8.6,21.8-15.3A19.74,19.74,0,0,0,512,345.9Z">
+                            </path>
+                        </g>
+                    </svg>
+                    Playstation
+                </h2>
+                <div class="games-container">
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/elden-ring.jpg" alt="buckshot-roulette">
+                                <span class="discount">-20%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Elden Ring - Shadow of the Erdtree</p>
+                            <p>$34.55</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/destiny-2-the-final-shape.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-25%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Destiny 2: The Final Shape</p>
+                            <p>$40.14</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/still-wakes-the-deep.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-34%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Still Wakes the Deep</p>
+                            <p>$24.68</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/dragon-ball-sparking-zero-ultimate-edition.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-25%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Dragon Ball: Sparking! ZERO</p>
+                            <p>$89.08</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/test-drive-unlimited-solar-crown-gold-edition.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-38%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Test Drive Unlimited Solar Crown</p>
+                            <p>$53.66</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/the-elder-scrolls-online-deluxe-upgrade-gold-road-deluxe-upgrade-pc-juego-steam-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-24%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Warhammer 40,000: Space Marine 2</p>
+                            <p>$82.11</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/dark-souls-remastered-pc-game-steam-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-60%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Dark Souls Remastered</p>
+                            <p>$17.16</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/moving-out-2-deluxe-edition-deluxe-edition.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-37%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Moving Out 2 Deluxe Edition</p>
+                            <p>$26.86</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/zoeti-pc-jeu-steam-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-63%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Zoeti</p>
+                            <p>$7.72</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/call-of-duty-modern-warfare-iii-ps5-playstation-5-game-playstation-store-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-16%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Call of Duty: Modern Warfare III PS5</p>
+                            <p>$71.88</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/alien-rogue-incursion-ps5-playstation-5-game-playstation-store-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-10%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Alien: Rogue Incursion</p>
+                            <p>$76.99</p>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <div>
+                                <img src="./public/imgs/games/playstation/skydance-s-behemoth-ps5-playstation-5-game-playstation-store-cover.jpg"
+                                    alt="buckshot-roulette">
+                                <span class="discount">-12%</span>
+                            </div>
+                        </a>
+                        <div class="game-info">
+                            <p>Skydance's Behemoth</p>
+                            <p>$66.50</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="cart-game">
-                <a href="#">
-                    <img src="./public/imgs/games/grand-theft-auto-v-premium-online-edition-premium-online-edition-pc-game-rockstar-cover.jpg"
-                        alt="buckshot-roulette">
-                </a>
-                <div class="game-info">
-                    <p>Grand Theft Auto V: Premium Online Edition</p>
-                    <span>$11.99</span>
-                    <button>Eliminar del carrito</button>
-                </div>
-            </div>
-            <div class="cart-game">
-                <a href="#">
-                    <img src="./public/imgs/games/another-crab-s-treasure-pc-game-steam-cover.jpg"
-                        alt="buckshot-roulette">
-                </a>
-                <div class="game-info">
-                    <p>Another Crab's Treasure</p>
-                    <span>$16.25</span>
-                    <button>Eliminar del carrito</button>
-                </div>
-            </div>
-        </div>
-        <div class="cart-info">
-            <h3>Información de la compra</h3>
-            <span class="cart-text">Total: <strong>$38.23</strong></span>
-            <span class="cart-text">Cantidad de juegos: <strong>3</strong></span>
-            <span class="cart-text">Nombre Completo: <strong>Marcos Dionel Iannibelli</strong></span>
-            <span class="cart-text">Localidad: <strong>CABA, Argentina</strong></span>
-            <span class="cart-text">Número de celular: <strong>1122334455</strong></span>
-            <span class="cart-text">Reembolso disponible: <strong>Si</strong></span>
-            <button><span class="span-btn">Comprar</span></button>
-        </div>
-    </section>
-
+        </section>
+    </main>
 
     <!-- FOOTER -->
     <footer>
@@ -696,11 +833,11 @@
         <div class="bar-separator"></div>
         <div class="terms-footer">
             <span>El uso de este sitio web implica la aceptación de los <strong>Términos y condiciones</strong>, la
-                <strong>Política de cookies</strong> y la <strong>Política de privacidad</strong>. Todos los derechos de
-                autor, marcas comerciales y marcas de servicio pertenecen a sus correspondientes propietarios.</span>
+                <strong>Política de cookies</strong> y la <strong>Política de privacidad</strong>. Todos los
+                derechos de autor, marcas comerciales y marcas de servicio pertenecen a sus correspondientes
+                propietarios.</span>
         </div>
     </footer>
-    </main>
 </body>
 
 </html>
